--- a/css/layout.css
+++ b/css/layout.css
@@ -32,6 +32,26 @@ header video{
   line-height:160%;
 }
 
+.profile{box-sizing:border-box}
+
+/*컨테이너 서식 - 스킬바*/
+.container {
+  width: 100%;
+  background-color: #ddd;
+}
+
+.skills {
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+}
+
+.html {width: 90%; background-color: #F25320;}
+.css {width: 80%; background-color: #0A6EAF;}
+.js {width: 55%; background-color: #F0CE41;}
+.react {width: 45%; background-color: #4b6cff;}
+
 header > h1{
   position:absolute;
   left:3%;top:3%;
@@ -46,7 +66,7 @@ header span{
   text-align:center;
   color:#fff;animation:ani infinite 3s;
 }
-header i.fas{
+header i.fa-mouse{
   color:#fff;
   font-size:20px;
   display:inline-block;
@@ -100,8 +120,8 @@ main > section{
   width:1200px;
   height:800px;
   margin:30px auto 30px auto;
-  background:#06b1f5;
-  color:#fff;
+  /* background:#06b1f5; */
+  color:#111;
 }
 main > section > h2{
   text-align:center;
@@ -123,19 +143,20 @@ main > section > h2{
 }
 .pic li{
   position:absolute;
-  bottom:-80px;left:170px;
+  bottom:-90px;left:170px;
   font-size:20px;
 }
 .pic li:nth-child(3){
   position:absolute;
-  bottom:-170px;
+  bottom:-180px;
   line-height:130%;
   font-size:15px;
 }
 .txt{
   position:absolute;
-  bottom:-630px;right:550px;
+  bottom:-780px;right:550px;
   line-height:160%;
+  font-size:13px;
 }
 .txt li{display:block;}
 .txt li:first-child, .txt li:nth-child(2), .txt li:nth-child(3){margin-bottom:50px}
@@ -147,6 +168,16 @@ main > section > h2{
   position:relative;
   width:1200px;height:700px;
   /* background:#f00; */
+}
+.pro li{
+  transition:0.3s;
+}
+.pro li:hover{
+  background:#fff;
+  border:3px solid rgb(92, 222, 255);
+}
+.pro li:hover a{
+  color:#111;
 }
 
 .p_list{
@@ -162,7 +193,7 @@ main > section > h2{
   padding:1px 13px 1px 13px;
   background:rgb(92, 222, 255);
   border:1px solid #fff;
-  color:#fff;
+  color:#111;
   font-size:20px;
   text-align:center;
 }
@@ -198,21 +229,24 @@ main > section > h2{
   font-size:20px;
   line-height:160%;
 }
+/*버튼 서식*/
 .view_site{
   display:flex;
-  justify-content:space-around;
+  justify-content:left;
 }
 .view_site li{
-  width:80px;height:20px;
+  width:80px;height:25px;
   padding:5px;
-  color:#fff;
+  color:#111;
+  background:rgb(92, 222, 255);
   border:1px solid #fff;
   transform:translateY(30px);
   line-height:19px;
   text-align:center;
+  margin-right:10px;
 }
 .view_site a{
-  color:#fff;
+  color:#111;
   font-size:15px;
 }
 
@@ -222,7 +256,11 @@ footer{
   background:#333;
   color:#333;
   text-align:center;
-  line-height:60px;
+}
+footer p{
+  color:#fff;
+  line-height:200%;
+  padding:20px 0px 20px 0px;
 }
 .fa-arrow-up{
   font-size:23px;
@@ -234,7 +272,6 @@ footer{
   border-radius:50%;
   background:#208DC0;
   position:fixed;bottom:30px;right:20px;
-  z-index:1000;
 }
 .t_btn:hover{
   background-color: #fff;
