--- a/css/layout.css
+++ b/css/layout.css
@@ -15,7 +15,7 @@ body{
 header{
   width:100%;
   height:100vh; /* vertical height약자 */
-  background-color:#ff0;
+  /* background-color:#ff0; */
   position:relative;
   overflow:hidden;
 }
@@ -136,7 +136,7 @@ main > section > h2{
 .name01{}
 .pic{position:relative;}
 .pic div{
-  background:#fff;
+  background:rgba(89, 172, 250, .5);
   width:350px;height:350px;
   border-radius:50%;
   transform:translate(100px, 50px);
